MS-5 Added list views for resources.
